feat(custom-table): add undo/redo history, toggle toolbar buttons, and full-size container
- Implement undo/redo with snapshot history covering text edits, cell/row/column styles, row/col add/remove, sizes, merges, and selection
- Debounce typing into a single undo step via #setCellValue; end typing txn on blur
- Keyboard shortcuts: Ctrl/Cmd+Z (undo), Ctrl+Y or Shift+Ctrl/Cmd+Z (redo)
- Toolbar buttons (align/bold/italic) now toggle on/off based on current scope and re-sync active state
- Make ctTable fill its parent using flex; honor options.width/options.height; keep toolbar sticky
- Wire snapshots in setCellStyle/setRowStyle/setColumnStyle/addRow/addColumn/removeRow/removeColumn
- Preserve focus and selection highlights after render

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "mklctable",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "A feature-rich, styleable, and framework-agnostic data table component.",
   "main": "lib/custom-table.js",
+  "files": [
+    "dist",
+    "lib"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
