feat: add ES module support for XLSX library
- Add xlsx.bundle.js from xlsx-js-style for local usage
- Create xlsx.mjs as ES module wrapper for UMD bundle
- Update custom-table.js to import XLSX as ES module
- Remove script tag from index.html (no longer needed)
- Users can now use the library without manually adding script tags

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mklctable",
-  "version": "1.0.2",
-  "description": "A feature-rich, styleable, and framework-agnostic data table component.",
+  "version": "1.0.3",
+  "description": "Custom table library",
   "main": "lib/custom-table.js",
   "files": [
     "dist",
